Fix text wrap for list item

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -21,7 +21,7 @@ code, kbd, pre {
 main {
   margin-left: auto;
   margin-right: auto;
-  padding: 1.5rem 1rem 1.5rem 1rem;
+  padding: 1.5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
