--- a/assets/scss/mixins/items.scss
+++ b/assets/scss/mixins/items.scss
@@ -1,7 +1,6 @@
 @mixin list-link-item {
   color: var(--color-text);
   border-bottom: 2px solid var(--color-border);
-  white-space: nowrap;
 
   &:hover {
     border-bottom-color: var(--color-text-secondary);
